plugins {
    id 'java'
}

group = "pl.cezarysanecki"
version = "0.0.1-SNAPSHOT"

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(24)
        }
    }

    repositories {
        mavenCentral()
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
